Updated dashboards, scheduling views, and curriculum handling